[gd_scene load_steps=12 format=3 uid="uid://c7ts43x3qhx5n"]

[ext_resource type="Theme" uid="uid://w7if2jyg2wqc" path="res://themes/base.tres" id="1_xapws"]
[ext_resource type="Script" path="res://Scripts/Form.gd" id="2_sxd4s"]
[ext_resource type="Texture2D" uid="uid://2f4u4kpjmoko" path="res://assets/buttons/form_paper_2x.png" id="3_el1rb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_432t0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_snjo8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hsl2r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pygo5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8nqhm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hyt4l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o7slq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ma8cn"]

[node name="Form" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xapws")
script = ExtResource("2_sxd4s")

[node name="FormSprite" type="Sprite2D" parent="." groups=["Form"]]
position = Vector2(-36, 8)
texture = ExtResource("3_el1rb")

[node name="Name" type="LineEdit" parent="." groups=["Form"]]
layout_mode = 0
offset_left = -52.0
offset_top = -144.0
offset_right = 84.0
offset_bottom = -113.0
theme = ExtResource("1_xapws")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_432t0")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_snjo8")
max_length = 14
expand_to_text_length = true
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true

[node name="Cause" type="LineEdit" parent="." groups=["Form"]]
layout_mode = 0
offset_left = -44.0
offset_top = -56.0
offset_right = 84.0
offset_bottom = -25.0
theme = ExtResource("1_xapws")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_hsl2r")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_pygo5")
max_length = 12
expand_to_text_length = true
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true

[node name="Time" type="LineEdit" parent="." groups=["Form"]]
layout_mode = 0
offset_left = -60.0
offset_top = 32.0
offset_right = 84.0
offset_bottom = 63.0
theme = ExtResource("1_xapws")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_8nqhm")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_hyt4l")
max_length = 10
expand_to_text_length = true
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Kin" type="LineEdit" parent="." groups=["Form"]]
layout_mode = 0
offset_left = -76.0
offset_top = 128.0
offset_right = 84.0
offset_bottom = 159.0
theme = ExtResource("1_xapws")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_o7slq")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_ma8cn")
max_length = 14
expand_to_text_length = true
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true

[node name="Submit_Form" type="Button" parent="." groups=["Form"]]
layout_mode = 0
offset_left = 132.0
offset_top = 112.0
offset_right = 164.0
offset_bottom = 144.0

[node name="RichTextLabel" type="RichTextLabel" parent="." groups=["Form"]]
layout_mode = 0
offset_left = 84.0
offset_top = 144.0
offset_right = 212.0
offset_bottom = 184.0
bbcode_enabled = true
text = "[center]Submit[/center]"

[connection signal="text_changed" from="Name" to="." method="_on_name_text_changed"]
[connection signal="text_changed" from="Cause" to="." method="_on_cause_text_changed"]
[connection signal="text_changed" from="Time" to="." method="_on_time_text_changed"]
[connection signal="text_changed" from="Kin" to="." method="_on_kin_text_changed"]
[connection signal="pressed" from="Submit_Form" to="." method="_on_submit_form_pressed"]
